# lama-blanket

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
scripts/: package-release.ps1  sync-version.mjs
src/: app.rs  config.rs  gguf.rs  hwdetect.rs  main.rs  persistence.rs  server.rs  tray.rs
